# HokoBlur

./: .gitignore  README.md  build.gradle  gradle.properties  gradlew  release.sh  settings.gradle  stripe.gradle
app/: Application.mk  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  BoxBlur.cpp  BoxBlur.h  StackBlur.cpp  StackBlur.h
app/src/main/rs/: boxblur.rs  invert.rs  stackblur.rs
blur-library/: build.gradle
blur-library/src/main/: AndroidManifest.xml
blur-library/src/main/jni/: BoxBlur.cpp  GaussianBlurFilter.cpp  StackBlur.cpp  StackBlurFilter.cpp
blur-library/src/main/rs/: stackblur.rs
dependencies-plugin/: build.gradle  settings.gradle
doc/: Blurtime.numbers  Dynamic Blur.md  README02.md  README_CN.md  Readme.md  performance_analysis.md
gradle/: bintray.gradle  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hoko-blur/: build.gradle  maven-center.gradle  proguard-rules.pro
hoko-blur/src/main/: AndroidManifest.xml
hoko-blur/src/main/jni/: Android.mk  BitmapReplace.cpp  BlurDrawable.cpp  BlurUtil.cpp  BoxBlurFilter.cpp  CMakeLists.txt  DrawFunctor.cpp  GaussianBlurFilter.cpp  ScopeJEnv.cpp  StackBlurFilter.cpp  empty.c  scope_jenv.cpp
hoko-blur/src/main/jni/include/: BitmapReplace.h  BlurDrawable.h  BlurUtil.h  BoxBlurFilter.h  DrawFunctor.h  DrawGlInfo.h  Functor.h  GaussianBlurFilter.h  ScopeJEnv.h  StackBlurFilter.h  scope_jenv.h
hoko-blur/src/main/rs/: BoxBlur.rs  BoxblurHorizontal.rs  BoxblurVertical.rs  StackBlur.rs  Stackblur.rs  boxblur.rs  (+1 more)
(+339 files in other folders)
